# talengo-data

./: .env  .gitignore  linkedin_urls.ipynb  pyproject.toml  tables_fields.csv
sf-transfers/: .env  config.py  contact.py  contact_new.py  create_metadata.py  employee.py  get_relations.py  get_relations_recursive.py  init.py  invoice.py  migrate.py  model.json  opportunity_team_member.py  pipeline_tag_map.py  readme.md  upsert.py  upsert_record.py  upsert_recursively.py
sf-transfers/analysis/: asset_order_counts.ipynb  candidate_pipeline_permutations.ipynb  candidate_pipeline_stats.ipynb
sf-transfers/cdg/: change_employee_record_types.py  copy_user_to_employee.py  create_user_contacts.py  delete_opp_team_member.py  regenerate_compensation.py
sf-transfers/cdg/sf-cdg-project/: sfdx-project.json
sf-transfers/data/: compensation__c_fields.json  model.json
sf-transfers/ezekia/: api.py  base_api.py
sf-transfers/file_migrations/: attachments.py  azure_setup.py
sf-transfers/metadata/: create_metadata.py  pricebook_entry.py  products.py
sf_transfers/: initial_setup.py  migrate.py  upsert_record.py
sf_transfers/analysis/: candidate_pipeline_permutations.ipynb  candidate_pipeline_stats.ipynb  compensation_difference.ipynb  cv_count_disparity.ipynb
sf_transfers/cdg/: copy_user_to_employee.py  migrate_equipo.py  readme.md
sf_transfers/data/: contact_fields.json  relations.json  relations_recursive.json
sf_transfers/ezekia/: api.py  base_api.py
sf_transfers/metadata/: delete_metadata.py  pricebook.py  pricebook_entry.py  save_field_metadata.py
(+16 files in other folders)
